--- a/book_outlet/templates/book_outlet/book_detail.html
+++ b/book_outlet/templates/book_outlet/book_detail.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "book_outlet/base.html"%}
+{% block title %}
+    {{ title }}
+{% endblock %}
+{% block content %}
+    <h1>{{ is_bestselling }}</h1>
+    <h2>{{ author }}</h2>
+    <p>The book has rating of {{ rating }}
+        {% if is_bestselling %}
+            and is a bestseller.
+        {% else %}
+            but isn't a bestseller.
+        {% endif %}
+    </p>
+{% endblock %}
